--- a/ilkproje/package.json
+++ b/ilkproje/package.json
@@ -26,6 +26,8 @@
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
+    "sass": "^1.56.1",
+    "sass-loader": "^10.4.1",
     "webpack": "^4.46.0"
   }
 }
