--- a/ilkproje/package.json
+++ b/ilkproje/package.json
@@ -23,7 +23,8 @@
     "popper.js": "^1.16.1",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10"
+    "vue-template-compiler": "^2.7.10",
+    "vue3-carousel": "^0.1.29"
   },
   "devDependencies": {
     "sass": "^1.56.1",
