--- a/ilkproje/package.json
+++ b/ilkproje/package.json
@@ -15,16 +15,19 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@popperjs/core": "^2.11.6",
+    "axios": "^1.2.3",
     "bootstrap": "^5.2.3",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.25.3",
+    "firebase": "^9.15.0",
     "jquery": "^3.6.1",
     "nuxt": "^2.15.8",
     "popper.js": "^1.16.1",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
-    "vue3-carousel": "^0.1.29"
+    "vue3-carousel": "^0.1.48",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "sass": "^1.56.1",
