--- a/ilkproje/package.json
+++ b/ilkproje/package.json
@@ -12,14 +12,16 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.25.3",
     "firebase": "^9.16.0",
-    "nuxt": "^2.15.8",
-    "vue": "^2.7.10",
-    "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10",
-    "vuetify": "^2.6.10"
+    "nuxt": "^3.1.0",
+    "vue": "^3.2.36",
+    "vue-server-renderer": "^3.7.10",
+    "vue-template-compiler": "^3.7.10",
+    "vuetify": "^3.1.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@nuxtjs/pwa": "^3.3.5",
-    "@nuxtjs/vuetify": "^1.12.3"
+    "@nuxtjs/vuetify": "^1.12.3",
+    "typescript": "^4.9.4"
   }
 }
